fixing add comment button on mobile

--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -24,7 +24,7 @@
         font-size: 14px;
         margin-top: 22px;
         box-sizing: border-box;
-        padding: 0 48px;
+        padding: 0 48px 0 24px;
         color: rgba(18, 21, 29, 0.6);
     }
     
